<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <jackytallow.com.GameBox.GameView
        android:id="@+id/game_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_prv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_prev_level"/>
        <Button
            android:id="@+id/btn_next_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_next_level"/>
        <Button
            android:id="@+id/btn_reset"
            android:text="@string/label_reset_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_exit"
            android:text="@string/label_exit_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>