<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:text="@string/tui_xiangzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kaishi_youxi"
            android:id="@+id/btn_start_game"
            android:layout_marginTop="45dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/youxi_jianjie"
            android:id="@+id/btn_game_intro"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuichu_youxi"
            android:id="@+id/btn_exit"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </LinearLayout>

</LinearLayout>
